--- a/html/notes/notes_content/FurtherProcessesAndTechniques.html
+++ b/html/notes/notes_content/FurtherProcessesAndTechniques.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/projectManagement.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/createEvaluateDesignIdea.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
