--- a/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
+++ b/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/modelCost.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_ModellingTheCostingOfProjectsToAchieveOptimumOutcome.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/propertyrights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/standardsForProducts.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_StandardsForProducts.pdf">Standards for Products</a>
