--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -145,7 +145,7 @@
             </div>
             <div class="content-wrapper">
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0); border-bottom: 2px solid rgba(255, 0, 0);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
@@ -153,6 +153,30 @@
                             </div>
                             <div class="blurbox">
                                 <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2022P1MS.pdf">2022 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0); border-bottom: 2px solid rgba(255, 0, 0);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2021P1Q.pdf">2021 Question Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2021P1MS.pdf">2021 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0); ">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2020P1Q.pdf">2020 Question Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2020P1MS.pdf">2020 Markscheme</a>
                             </div>
                         </div>
                     </div>
@@ -174,14 +198,26 @@
             </div>
             <div class="content-wrapper">
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 255);border-bottom: 2px solid rgba(255, 0, 255); ">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\AQA_A_Level\AQA_2022P1Q.pdf">2022 Question Paper 1</a>
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2022P1Q_PD.pdf">2022 Question Paper (Product Design)</a>
                             </div>
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\AQA_A_Level\AQA_2022P1MS.pdf">2022 Markscheme</a>
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2022P1MS_PD.pdf">Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 255); ">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2019P1Q_PD.pdf">2019 Question Paper (Product Design)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2019P1MS_PD.pdf">Markscheme</a>
                             </div>
                         </div>
                     </div>
@@ -208,14 +244,62 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2022P1Q.pdf">2022 Question paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2022P1RB.pdf">2022 Resource booklet</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2022P1MS.pdf">2022 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2021P1Q.pdf">2021 Question paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2021P1RB.pdf">2021 Resource booklet</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2021P1MS.pdf">2021 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2020P1Q.pdf">2020 Question paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2020P1RB.pdf">2020 Resource booklet</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2020P1MS.pdf">2020 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P1Q.pdf">2022 Question Paper (Principles of product design)</a>
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2019P1Q.pdf">2019 Question paper</a>
                             </div>
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P1Q.pdf">2022 Markscheme</a>
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2019P1RB.pdf">2019 Resource booklet</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2019P1MS.pdf">2019 Markscheme</a>
                             </div>
                         </div>
                     </div>
