--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -178,7 +178,7 @@
                         </div>
                     </div>
 
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
@@ -189,6 +189,224 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Metals.pdf">2021 Question Paper (Metals)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Metals.pdf">2021 Markscheme (Metals)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Papers.pdf">2021 Question Paper (Papers and Boards)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Papers.pdf">2021 Markscheme (Papers and Boards)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Polymers.pdf">2021 Question Paper (Polymers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Polymers.pdf">2021 Markscheme (Polymers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Systems.pdf">2021 Question Paper (Systems)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Systems.pdf">2021 Markscheme (Systems)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Textiles.pdf">2021 Question Paper (Textiles)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Textiles.pdf">2021 Markscheme (Textiles)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);  border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Timbers.pdf">2020 Question Paper (Timbers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Timbers.pdf">2020 Markscheme (Timbers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Metals.pdf">2020 Question Paper (Metals)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Metals.pdf">2020 Markscheme (Metals)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Papers.pdf">2020 Question Paper (Papers and Boards)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Papers.pdf">2020 Markscheme (Papers and Boards)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Polymers.pdf">2020 Question Paper (Polymers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Polymers.pdf">2020 Markscheme (Polymers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Systems.pdf">2020 Question Paper (Systems)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Systems.pdf">2020 Markscheme (Systems)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1Q_Textiles.pdf">2020 Question Paper (Textiles)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2020P1MS_Textiles.pdf">2020 Markscheme (Textiles)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Timbers.pdf">2019 Question Paper (Timbers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Timbers.pdf">2019 Markscheme (Timbers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Metals.pdf">2019 Question Paper (Metals)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Metals.pdf">2019 Markscheme (Metals)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Papers.pdf">2019 Question Paper (Papers and Boards)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Papers.pdf">2019 Markscheme (Papers and Boards)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Polymers.pdf">2019 Question Paper (Polymers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Polymers.pdf">2019 Markscheme (Polymers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Systems.pdf">2019 Question Paper (Systems)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Systems.pdf">2019 Markscheme (Systems)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Textiles.pdf">2019 Question Paper (Textiles)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Textiles.pdf">2019 Markscheme (Textiles)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1Q_Timbers.pdf">2019 Question Paper (Timbers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2019P1MS_Timbers.pdf">2019 Markscheme (Timbers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    
                 </div>
             </div>
         </div>
