--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
@@ -5,7 +5,7 @@
     </head>
 
 <body style="background-color: rgb(255, 255, 255);">
-    <div class="containter" style="background-color: rgb(255, 255, 255);">
+    <div class="containter" style="background-color: rgb(255, 255, 255);">  
         <div class="quote" margin-top style="background-color: rgb(255, 255, 255);">
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
@@ -21,33 +21,25 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html">AQA A-Level Notes</a>
+                            <a href="../aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html">Technical Principles</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_examboard/edexcel_alevel_notes/edexcel_alevel_notes.html">Edexcel A-Level Notes</a>
+                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
+                            <a href="../aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html">Designing and Making Principles</a>
                         </div>
                     </div>
                 </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../images/portfolio3.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_examboard/ocr_alevel_notes/ocr_alevel_notes.html">OCR A-Level Notes</a>
-                        </div>
-                    </div>
-                </div>                
+                
             </div>
         </div>
 
