--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/performance_characteristics_of_materials.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/performance_characteristics_of_materials.html
@@ -13,28 +13,99 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_pprs_a_brds_notes.html">Performance characteristics of papers and boards</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_plymer_shet_notes.html">Performance characteristics of polymer based sheet and film</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_woods_notes.html">Performance characteristics of woods
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_metals_notes.html">Performance characteristics of metals
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_polymers_notes.html">Performance characteristics of polymers
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\elastomers_notes.html">Elastomers
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\biodegradable_polymers_notes.html">Biodegradable polymers
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_composites_notes.html">Composites
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_smart_materials_notes.html">Smart materials
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_modern_materials_notes.html">Modern materials
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -42,9 +113,9 @@
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
